# odoo-bringout-l10n_ba_so_cijena_sa_pop_iznos_sa_pdv

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
l10n_ba_so_cijena_sa_pop_iznos_sa_pdv/: __manifest__.py
l10n_ba_so_cijena_sa_pop_iznos_sa_pdv/input/: ODOO_MODELS.md  ir_report_templates.xml
l10n_ba_so_cijena_sa_pop_iznos_sa_pdv/models/: sale_order.py
l10n_ba_so_cijena_sa_pop_iznos_sa_pdv/views/: sale_order_document_view.xml
